Restructure 'analysis-requester' and 'analysis-responder' pods
